fix #3032 UI: make quick commands/batch input more visible

--- a/src/client/components/footer/footer.styl
+++ b/src/client/components/footer/footer.styl
@@ -43,3 +43,5 @@
       display inline
     .bi-compact
       display none
+.batch-input-holder
+  width 100px
