--- a/src/client/components/quick-commands/qm.styl
+++ b/src/client/components/quick-commands/qm.styl
@@ -2,14 +2,6 @@
 .qm-list-wrap
   max-height calc(100vh - 100px)
   overflow-y scroll
-.qm-trigger
-  .qm-full
-    display none
-  &:hover
-    .qm-full
-      display inline
-    .qm-compact
-      display none
 .qm-wrap-tooltip
   background main
   position absolute
